force-app/main/default/objects/Mass_Upload_CSV__c/Mass_Upload_CSV__c.object-meta.xml
<CustomObject>
    <label>Mass Upload CSV</label>
    <nameField>
        <label>Mass Upload CSV Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mass Upload CSVs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>