force-app/main/default/objects/Mass_Upload_CSV__c/fields/CSV_fields__c.field-meta.xml
<CustomField>
    <fullName>CSV_fields__c</fullName>
    <label>CSV fields</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>File_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Profit_Center__r</fullName>
            </value>
            <value>
                <fullName>Sales_Org__r</fullName>
            </value>
            <value>
                <fullName>Dc</fullName>
            </value>
            <value>
                <fullName>Div</fullName>
            </value>
            <value>
                <fullName>SKU_Code__r</fullName>
            </value>
            <value>
                <fullName>UOM__c</fullName>
            </value>
            <value>
                <fullName>Type__c</fullName>
            </value>
            <value>
                <fullName>Distributor_Code__r</fullName>
            </value>
            <value>
                <fullName>Depot_Code__r</fullName>
            </value>
            <value>
                <fullName>Combination_Key__c</fullName>
            </value>
            <value>
                <fullName>Sales_Deduction_LC__c</fullName>
            </value>
            <value>
                <fullName>Sales_Deduction_USD__c</fullName>
            </value>
            <value>
                <fullName>E2E_Cost_LC__c</fullName>
            </value>
            <value>
                <fullName>E2E_Cost_USD__c</fullName>
            </value>
            <value>
                <fullName>E2E_Cost_UPC9_LC__c</fullName>
            </value>
            <value>
                <fullName>E2E_Cost_UPC9_USD__c</fullName>
            </value>
            <value>
                <fullName>E2E_Cost_MBEW_LC__c</fullName>
            </value>
            <value>
                <fullName>E2E_Cost_MBEW_USD__c</fullName>
            </value>
            <value>
                <fullName>Rebate_Code__c</fullName>
            </value>
            <value>
                <fullName>Rebate_USD__c</fullName>
            </value>
            <value>
                <fullName>Rebate_LC__c</fullName>
            </value>
            <value>
                <fullName>Rebate__c</fullName>
            </value>
            <value>
                <fullName>Discount_LC__c</fullName>
            </value>
            <value>
                <fullName>Discount_USD__c</fullName>
            </value>
            <value>
                <fullName>Discount__c</fullName>
            </value>
            <value>
                <fullName>Additional_Discount_LC__c</fullName>
            </value>
            <value>
                <fullName>Additional_Discount_USD__c</fullName>
            </value>
            <value>
                <fullName>Additional_Discount__c</fullName>
            </value>
            <value>
                <fullName>PLN_LC__c</fullName>
            </value>
            <value>
                <fullName>PLN_USD__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>