force-app/main/default/objects/Mass_Upload_CSV__c/fields/Error_records__c.field-meta.xml
<CustomField>
    <fullName>Error_records__c</fullName>
    <label>Error records</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>