force-app/main/default/objects/Mass_Upload_CSV__c/fields/File_Type__c.field-meta.xml
<CustomField>
    <fullName>File_Type__c</fullName>
    <label>File Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SalesDeduction</fullName>
            </value>
            <value>
                <fullName>E2ECost</fullName>
            </value>
            <value>
                <fullName>E2ECostUPC9</fullName>
            </value>
            <value>
                <fullName>E2ECostMBEW</fullName>
            </value>
            <value>
                <fullName>Rebate</fullName>
            </value>
            <value>
                <fullName>AdditionalDiscount</fullName>
            </value>
            <value>
                <fullName>Discount</fullName>
            </value>
            <value>
                <fullName>PLN</fullName>
            </value>
            <value>
                <fullName>UOMConversion</fullName>
            </value>
            <value>
                <fullName>USDExchangeRate</fullName>
            </value>
            <value>
                <fullName>PLNCustomer</fullName>
            </value>
            <value>
                <fullName>RebateCustomer</fullName>
            </value>
            <value>
                <fullName>E2E UPC9</fullName>
                <isActive>false</isActive>
                <label>E2E UPC9</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>