force-app/main/default/objects/Mass_Upload_CSV__c/fields/isAttachment__c.field-meta.xml
<CustomField>
    <fullName>isAttachment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isAttachment</label>
    <type>Checkbox</type>
</CustomField>