force-app/main/default/objects/Mass_Upload_CSV__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>Mass_Upload_CSV__c</referenceTo>
    <relationshipLabel>Mass Upload CSVs</relationshipLabel>
    <relationshipName>Mass_Upload_CSVs</relationshipName>
    <type>Lookup</type>
</CustomField>