force-app/main/default/objects/Mass_Upload_CSV__c/fields/Seperator__c.field-meta.xml
<CustomField>
    <fullName>Seperator__c</fullName>
    <label>Seperator</label>
    <length>20</length>
    <type>Text</type>
</CustomField>