force-app/main/default/objects/Mass_Upload_CSV__c/fields/Total_records__c.field-meta.xml
<CustomField>
    <fullName>Total_records__c</fullName>
    <label>Total records</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>