force-app/main/default/objects/Mass_Upload_CSV__c/fields/Upload_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Upload_Date_Time__c</fullName>
    <label>Upload Date Time</label>
    <type>DateTime</type>
</CustomField>