force-app/main/default/objects/Mass_Upload_CSV__c/fields/Upsert_Key__c.field-meta.xml
<CustomField>
    <fullName>Upsert_Key__c</fullName>
    <externalId>true</externalId>
    <label>Upsert Key</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>