force-app/main/default/objects/Mass_Upload_CSV__c/recordTypes/Original.recordType-meta.xml
<RecordType>
    <fullName>Original</fullName>
    <active>true</active>
    <label>Original</label>
</RecordType>