force-app/main/default/objects/Mass_Upload_CSV__c/recordTypes/Split.recordType-meta.xml
<RecordType>
    <fullName>Split</fullName>
    <active>true</active>
    <label>Split</label>
</RecordType>