force-app/main/default/objects/Mass_Upload_CSV__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Upload_Date_Time__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Mass_Upload_CSV__c.Original</value>
    </filters>
    <label>All</label>
    <language>en_US</language>
</ListView>